Fix horizontal scrolling in code samples.

--- a/docs/_sass/_highlight.scss
+++ b/docs/_sass/_highlight.scss
@@ -8,6 +8,11 @@ $transparent: rgba(0,0,0,0);
 .highlight {
   margin: 0;
   padding: 0;
+  border-style: solid;
+  border-radius: 4px;
+  border-width: 1px;
+  border-color: $code-border-color;
+  background-color: $code-background-color;
 }
 
 pre {
@@ -18,13 +23,9 @@ pre {
   font-size: 14px;
 
   code {
-    border-style: solid;
-    border-radius: 4px;
-    border-width: 1px;
-    border-color: $code-border-color;
+    background-color: $transparent;
     margin: 0;
     padding: 0;
-    background-color: $code-background-color;
 
     table, pre {
       margin-bottom: 0;
